data/collection/fixes/descriptions/scala/scala-6600
the following code snippet compiles with 2.9.2:

```scala
final class Natural extends scala.math.ScalaNumber with scala.math.ScalaNumericConversions {
  def intValue(): Int = 0
  def longValue(): Long = 0L
  def floatValue(): Float = 0.0F
  def doubleValue(): Double = 0.0D
  def isWhole(): Boolean = false
  def underlying() = this
}
```

But both 2.10.0-RC1 and 2.11.0-20121023-093421-b480d99107 report the following error:

```scala
<console>:7: error: class Natural inherits conflicting members:
  method byteValue in class Number of type ()Byte  and
  method byteValue in trait ScalaNumericConversions of type ()Byte
(Note: this can be resolved by declaring an override in class Natural.);
 other members with override errors are: shortValue
       final class Natural extends scala.math.ScalaNumber with scala.math.ScalaNumericConversions {
                   ^
```